crates/backends/tests/snapshots/postgres__ordinary_table.snap
---
source: crates/backends/tests/postgres.rs
expression: snapshot
---
id: app
display_name: ~
catalog:
  namespaces:
    - name: app
      comment: ~
    - name: public
      comment: standard public schema
    - name: zeta
      comment: ~
  enums: []
  tables:
    - namespace: app
      name: accounts
      comment: Application accounts
      columns:
        - name: id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: always
          generated: ~
        - name: email
          data_type: text
          nullable: false
          default: "'unknown@example.invalid'::text"
          comment: Canonical login address
          enum_values: []
          identity: ~
          generated: ~
        - name: normalized_email
          data_type: text
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: lower(email)
      constraints:
        - name: accounts_email_nonempty
          kind: check
          columns:
            - email
          expression: "email <> ''::text"
          references: ~
          definition: "CHECK (email <> ''::text)"
          deferrable: false
          initially_deferred: false
          validated: true
          locally_defined: true
          no_inherit: false
      indexes:
        - name: accounts_normalized_email_idx
          unique: true
          terms:
            - target:
                expression: lower(email)
              collation: "pg_catalog.\"default\""
              operator_class: pg_catalog.text_ops
              order: descending
              nulls_order: first
          predicate: "email <> ''::text"
          definition: "CREATE UNIQUE INDEX accounts_normalized_email_idx ON app.accounts USING btree (lower(email) DESC) WHERE (email <> ''::text)"
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
    - namespace: zeta
      name: audit_log
      comment: ~
      columns:
        - name: id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: recorded_at
          data_type: timestamp with time zone
          nullable: true
          default: CURRENT_TIMESTAMP
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints: []
      indexes: []
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
  views: []
  triggers: []
  functions: []
