crates/backends/tests/snapshots/postgres__relationships.snap
---
source: crates/backends/tests/postgres.rs
expression: snapshot
---
id: billing
display_name: ~
catalog:
  namespaces:
    - name: billing
      comment: ~
    - name: public
      comment: standard public schema
  enums: []
  tables:
    - namespace: billing
      name: accounts
      comment: ~
      columns:
        - name: tenant_id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: account_id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: email
          data_type: text
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints:
        - name: accounts_pk
          kind: primary_key
          columns:
            - tenant_id
            - account_id
          expression: ~
          references: ~
          definition: "PRIMARY KEY (tenant_id, account_id)"
          deferrable: false
          initially_deferred: false
          validated: true
          locally_defined: true
          no_inherit: true
        - name: accounts_tenant_email_unique
          kind: unique
          columns:
            - tenant_id
            - email
          expression: ~
          references: ~
          definition: "UNIQUE (tenant_id, email)"
          deferrable: false
          initially_deferred: false
          validated: true
          locally_defined: true
          no_inherit: true
      indexes:
        - name: accounts_pk
          unique: true
          terms:
            - target:
                column: tenant_id
              collation: ~
              operator_class: pg_catalog.int8_ops
              order: ascending
              nulls_order: last
            - target:
                column: account_id
              collation: ~
              operator_class: pg_catalog.int8_ops
              order: ascending
              nulls_order: last
          predicate: ~
          definition: "CREATE UNIQUE INDEX accounts_pk ON billing.accounts USING btree (tenant_id, account_id)"
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
        - name: accounts_tenant_email_unique
          unique: true
          terms:
            - target:
                column: tenant_id
              collation: ~
              operator_class: pg_catalog.int8_ops
              order: ascending
              nulls_order: last
            - target:
                column: email
              collation: "pg_catalog.\"default\""
              operator_class: pg_catalog.text_ops
              order: ascending
              nulls_order: last
          predicate: ~
          definition: "CREATE UNIQUE INDEX accounts_tenant_email_unique ON billing.accounts USING btree (tenant_id, email)"
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
    - namespace: billing
      name: invoices
      comment: ~
      columns:
        - name: tenant_id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: account_id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: invoice_number
          data_type: text
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints:
        - name: invoices_account_fk
          kind: foreign_key
          columns:
            - tenant_id
            - account_id
          expression: ~
          references:
            namespace: billing
            table: accounts
            columns:
              - tenant_id
              - account_id
            on_update: cascade
            on_delete: restrict
            match_name: FULL
            deferrability:
              deferrable: true
              initially: deferred
          definition: "FOREIGN KEY (tenant_id, account_id) REFERENCES billing.accounts(tenant_id, account_id) MATCH FULL ON UPDATE CASCADE ON DELETE RESTRICT DEFERRABLE INITIALLY DEFERRED"
          deferrable: true
          initially_deferred: true
          validated: true
          locally_defined: true
          no_inherit: true
      indexes: []
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
  views: []
  triggers: []
  functions: []
